fix profile name size, end gets cut off on mobile phone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,12 +47,6 @@ h2 {
     margin-top: 1rem;
 }
 
-/* h3 { 
-    font-size: 1.1rem;
-    font-weight: 600;
-    padding-bottom: 1rem;
-} */
-
 button {
     margin: 10px;
     width: 155px;
@@ -136,11 +130,14 @@ input {
     margin: 3.5rem auto 2rem; 
 }
 
-.profile-name {
+.profile-card {
     margin-top: 3rem;
     font-family: Pacifico;
 }
 
+.profile-name {
+    font-size: 1.8rem;
+}
 .no-story {
     padding: 2rem 0;
 }
